DDF-3273 Update hardening documentation to emphasize SSH must be turned off.
Disable Java Security Manager.

(cherry picked from commit ff21d2a)